--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 body {
     background-color: #011b33;
+    
 }
 
 .paystack-logo {
@@ -65,4 +66,36 @@ input {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bolder;
     font-size: 16px;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+}
+
+.h-5 {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #EAECEE ;
+    text-align: center;
+    font-weight: bold;
+    margin-top: 1rem;
+    font-size: 17px;
+}
+
+.help {
+    position: absolute;
+    bottom: 15px;
+    right: 10px;
+    max-width: 100px;
+    width: 100%;
+    height: 50px;
+    border-radius: 40px;
+    background-color: #1a72b9 ;
+    border: none;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-weight: bolder;
+    font-size: 15px; 
 }
